# ttdays

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements_test.txt
.github/: pull_request_template.md
.github/workflows/: test.yml
tests/: Testing.md  test_date_calculator.py  test_date_model.py  test_functions.py  test_ttdays.py
ttdays/: __init__.py  date_calculator.py  date_model.py  date_models.py  functions.py
